相对路径修改

--- a/index copy.html
+++ b/index copy.html
@@ -101,7 +101,7 @@
         }
     });
 
-    hospitalCommon.newTab('概览','overview.html')
+    hospitalCommon.newTab('概览','./overview.html')
 
     
 
