修复路径跳转

--- a/activity-manage.html
+++ b/activity-manage.html
@@ -99,7 +99,7 @@
                             debugger
                             if (value == '汇总：')
                                 return value;
-                            return `<a href="JavaScript:void(0)" style="width:100%;display:inline-block;height:100%;" title="${value||''}" onclick="hospitalCommon.newTab('活动:${common.subOmitRight(row.name, 10)}','/activity.html?activityId=${row.activityId}')">${value}</a>`;
+                            return `<a href="JavaScript:void(0)" style="width:100%;display:inline-block;height:100%;" title="${value||''}" onclick="hospitalCommon.newTab('活动:${common.subOmitRight(row.name, 10)}','./activity.html?activityId=${row.activityId}')">${value}</a>`;
                         }, styler: function (value, row, index) {
                             return ``
                         }
