--- a/hospital-ad-manage.html
+++ b/hospital-ad-manage.html
@@ -106,7 +106,7 @@
                             debugger
                             if (value == '汇总：')
                                 return value;
-                            return `<a href="JavaScript:void(0)" style="width:100%;display:inline-block;height:100%;" title="${value || ''}" onclick="hospitalCommon.newTab('医院广告:${common.subOmitRight(row.name, 10)}','/hospital-ad.html?hospitalAdId=${row.hospitalAdId}')">${value}</a>`;
+                            return `<a href="JavaScript:void(0)" style="width:100%;display:inline-block;height:100%;" title="${value || ''}" onclick="hospitalCommon.newTab('医院广告:${common.subOmitRight(row.name, 10)}','./hospital-ad.html?hospitalAdId=${row.hospitalAdId}')">${value}</a>`;
                         }, styler: function (value, row, index) {
                             return ``
                         }
