--- a/office-manage.html
+++ b/office-manage.html
@@ -91,7 +91,7 @@
                             debugger
                             if (value == '汇总：')
                                 return value;
-                            return `<a href="JavaScript:void(0)" style="width:100%;display:inline-block;height:100%;" title="${value||''}" onclick="hospitalCommon.newTab('科室:${common.subOmitRight(row.name, 10)}','/office.html?officeId=${row.officeId}')">${value}</a>`;
+                            return `<a href="JavaScript:void(0)" style="width:100%;display:inline-block;height:100%;" title="${value||''}" onclick="hospitalCommon.newTab('科室:${common.subOmitRight(row.name, 10)}','./office.html?officeId=${row.officeId}')">${value}</a>`;
                         }, styler: function (value, row, index) {
                             return ``
                         }
