--- a/patient-manage.html
+++ b/patient-manage.html
@@ -121,7 +121,7 @@
                             debugger
                             if (value == '汇总：')
                                 return value;
-                            return `<a href="JavaScript:void(0)" style="width:100%;display:inline-block;height:100%;" title="${value||''}" onclick="hospitalCommon.newTab('病人:${common.subOmitRight(row.name, 10)}','/patient.html?patientId=${row.patientId}')">${value}</a>`;
+                            return `<a href="JavaScript:void(0)" style="width:100%;display:inline-block;height:100%;" title="${value||''}" onclick="hospitalCommon.newTab('病人:${common.subOmitRight(row.name, 10)}','./patient.html?patientId=${row.patientId}')">${value}</a>`;
                         }, styler: function (value, row, index) {
                             return ``
                         }
