--- a/article-manage.html
+++ b/article-manage.html
@@ -91,7 +91,7 @@
                             debugger
                             if (value == '汇总：')
                                 return value;
-                            return `<a href="JavaScript:void(0)" style="width:100%;display:inline-block;height:100%;" title="${value||''}" onclick="hospitalCommon.newTab('文章:${common.subOmitRight(row.name, 10)}','/article.html?articleId=${row.articleId}')">${value}</a>`;
+                            return `<a href="JavaScript:void(0)" style="width:100%;display:inline-block;height:100%;" title="${value||''}" onclick="hospitalCommon.newTab('文章:${common.subOmitRight(row.name, 10)}','./article.html?articleId=${row.articleId}')">${value}</a>`;
                         }, styler: function (value, row, index) {
                             return ``
                         }
