--- a/article-add.html
+++ b/article-add.html
@@ -194,7 +194,7 @@
                                             console.log(target.value)
                                             target.value=null;
                                             cropper = new Cropper(images, {
-                                                aspectRatio: 16 / 9,     //默认裁剪框大小
+                                                     //默认裁剪框大小
                                                 viewMode:(1),
                                                 modal : false,
                                                 guides : false, 
@@ -237,8 +237,6 @@
                         </div>
                         
                         <div style="width: 100%; width: 100%;height: 80px;text-align: center;margin-top: 10px;">
-                            <!-- <button style="width: 110px;height: 40px;border-radius: 6px;border: none;cursor: pointer;
-                            font-size: 17px;margin-right: 15px;" id="chaijian" onclick="showFn()" event.cancelBubble=true>裁剪</button> -->
                             <button style="width: 110px;height: 40px;border-radius: 6px;border: none;cursor: pointer;
                             font-size: 17px;margin-right: 15px;" onclick="submitFn()" event.cancelBubble=true>确认裁剪</button>
                             <button style="width: 110px;height: 40px;border-radius: 6px;border: none;cursor: pointer;
