--- a/ceshi.html
+++ b/ceshi.html
@@ -59,8 +59,6 @@
             </div>
             <div style="width: 100%; width: 100%;height: 80px;text-align: center;margin-top: 15px;">
                 <button style="width: 110px;height: 40px;border-radius: 6px;border: none;cursor: pointer;
-                font-size: 17px;margin-right: 15px;" id="chaijian" onclick="showFn()" event.cancelBubble=true>裁剪</button>
-                <button style="width: 110px;height: 40px;border-radius: 6px;border: none;cursor: pointer;
                 font-size: 17px;margin-right: 15px;" onclick="submitFn()" event.cancelBubble=true>确认裁剪</button>
                 <button style="width: 110px;height: 40px;border-radius: 6px;border: none;cursor: pointer;
                 font-size: 17px;" onclick="showcCancelFn()" event.cancelBubble=true>取消裁剪</button>
@@ -93,7 +91,7 @@
             $('.photoPopup').css('display', 'inline-block')
             const images = document.getElementById('images');
             cropper = new Cropper(images, {
-                aspectRatio: 16 / 9,     //默认裁剪框大小
+                     //默认裁剪框大小
                 viewMode:(1,3),
                 modal : false,
                 guides : false, 
