修改弹窗小屏不兼容

--- a/hospital-ad-add.html
+++ b/hospital-ad-add.html
@@ -290,11 +290,11 @@
                         </td>
                     </tr>
                     <div class="photoPopup" style="display: none;position: fixed;background: black;top: 0;left:0;z-index: 999;width: -2;height: 100%;width: 100%;">
-                            <div class="box" style="width: 700px;height: 380px;overflow: hidden;text-align: center;margin: auto;margin-top: 30px;" event.cancelBubble=true>
+                            <div class="box" style="width: 66%;height: 52%;overflow: hidden;text-align: center;margin: auto;margin-top: 30px;" event.cancelBubble=true>
                                 <img id="images" src="./libs/timg.jpg">
                             </div>
                             <div style="color: #FFF;margin: 15px auto;width: 300px;">裁剪预览</div>
-                            <div style="width: 300px;height: 200px!important;overflow: hidden;margin: auto;">
+                            <div style="width: 28%;height: 26%!important;overflow: hidden;margin: auto;">
                                     <div class="views" style="width: 300px;height: 200px!important;overflow: hidden;margin: auto;" event.cancelBubble=true>
                                         </div>
                             </div>
