修改删除键失效

--- a/article-manage.html
+++ b/article-manage.html
@@ -25,7 +25,7 @@
     <script src="./libs/viewer-master/dist/viewer.min.js"></script>
     <script src="./libs/common.js"></script>
     <link rel="stylesheet" href="./libs/common.css" />
-    <!-- <script src="./libs/jquery.extend.oneall.js"></script>啥 -->
+    <script src="./libs/jquery.extend.oneall.js"></script>
 
 
     <!-- <script src="/hospital/maintain./libs/common.js"></script> -->
