--- a/hospital-ad-add.html
+++ b/hospital-ad-add.html
@@ -24,6 +24,7 @@
     <script src="./libs/viewer-master/dist/viewer.min.js"></script>
     <script src="./libs/common.js"></script>
     <link rel="stylesheet" href="./libs/common.css" />
+    <script src="./libs/jquery.extend.oneall.js"></script>
     <link rel="stylesheet" href="./libs/kindeditor/themes/default/default.css" />
     <link rel="stylesheet" href="./libs/kindeditor/plugins/code/prettify.css" />
     <script charset="utf-8" src="./libs/kindeditor/kindeditor-all.js"></script>
