--- a/hospitalEdit.html
+++ b/hospitalEdit.html
@@ -33,7 +33,7 @@
     <script src="./libs/maintain/common.js"></script>
     <link rel="stylesheet" href="./libs/maintain/common.css" />
 
-
+    <script src="./libs/jquery.extend.oneall.js"></script>
 
     <link  href="./libs/cropper/cropper.css" rel="stylesheet">
     <script src="./libs/cropper/cropper.js"></script>
