--- a/index copy.html
+++ b/index copy.html
@@ -19,13 +19,12 @@
     <script src="./libs/carhartl-jquery-cookie-92b7715/jquery.cookie.js"></script>
     <!-- <script src="/hospital/maintain./libs/layer/layer.js"></script> -->
     <script src="./libs/layer/layer.js"></script>
-    <!-- <script src="/hospital/maintain./libs/jquery.extend.oneall.js"></script> -->
 
     <link rel="stylesheet" type="text/css" href="./libs/jquery-easyui-1.8.7/themes/default/easyui.css">
     <link rel="stylesheet" type="text/css" href="./libs/jquery-easyui-1.8.7/themes/icon.css">
     <link rel="stylesheet" type="text/css" href="./libs/jquery-easyui-1.8.7/demo/demo.css">
     <script type="text/javascript" src="./libs/jquery-easyui-1.8.7/jquery.easyui.min.js"></script>
-
+    <script src="./libs/jquery.extend.oneall.js"></script>
     <script src="./libs/common.js"></script>
     <link rel="stylesheet" href="libs/common.css" />
     <script src="index/index.js"></script>
