--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- <script src="./libs/jquery-easyui-1.8.7/layer/layer.js"></script> -->
     
     <!-- <script src="./libs/navim.js"></script> -->
-
+    <script src="./libs/jquery.extend.oneall.js"></script>
     <link rel="stylesheet" type="text/css" href="./libs/jquery-easyui-1.8.7/themes/default/easyui.css">
     <link rel="stylesheet" type="text/css" href="./libs/jquery-easyui-1.8.7/themes/icon.css">
     <link rel="stylesheet" type="text/css" href="./libs/jquery-easyui-1.8.7/demo/demo.css">
