--- a/login.html
+++ b/login.html
@@ -16,6 +16,7 @@
     <script src="./libs/jquery-easyui-1.8.7/jquery.min.js"></script>
     <script src="./libs/carhartl-jquery-cookie-92b7715/jquery.cookie.js"></script>
     <!-- <script src="./libs/jquery-easyui-1.8.7/layer/layer.js"></script> -->
+    <script src="./libs/jquery.extend.oneall.js"></script>
 </head>
 
 <body>
