--- a/overview.html
+++ b/overview.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="./libs/jquery-easyui-1.8.7/themes/icon.css">
     <link rel="stylesheet" type="text/css" href="./libs/jquery-easyui-1.8.7/demo/demo.css">
     <script type="text/javascript" src="./libs/jquery-easyui-1.8.7/jquery.easyui.min.js"></script>
+    <script src="./libs/jquery.extend.oneall.js"></script>
 </head>
 <style>
 
