--- a/activity.html
+++ b/activity.html
@@ -30,7 +30,7 @@
     <script charset="utf-8" src="./libs/kindeditor/kindeditor-all.js"></script>
     <script charset="utf-8" src="./libs/kindeditor/lang/zh-CN.js"></script>
     <script charset="utf-8" src="./libs/kindeditor/plugins/code/prettify.js"></script>
-
+    <script src="./libs/jquery.extend.oneall.js"></script>
     <!-- <script src="/hospital/maintain./libs/common.js"></script> -->
     <!-- <link rel="stylesheet" href="/hospital/maintain./libs/common.css" /> -->
 
