--- a/hospital-ad-manage.html
+++ b/hospital-ad-manage.html
@@ -26,7 +26,7 @@
     <script src="./libs/viewer-master/dist/viewer.min.js"></script>
     <script src="./libs/common.js"></script>
     <link rel="stylesheet" href="./libs/common.css" />
-    <!-- <script src="./libs/jquery.extend.oneall.js"></script> -->
+    <script src="./libs/jquery.extend.oneall.js"></script>
 
 
     <script src="./libs/maintain/common.js"></script>
