--- a/hospital-ad.html
+++ b/hospital-ad.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="./libs/maintain/common.css" />
     <link  href="./libs/cropper/cropper.css" rel="stylesheet">
     <script src="./libs/cropper/cropper.js"></script>
+    <script src="./libs/jquery.extend.oneall.js"></script>
 </head>
 
 <style>
