--- a/office.html
+++ b/office.html
@@ -349,7 +349,7 @@
                     <td><textarea name="content" style="width: 100%;height: 30px;padding:1px 4px"></textarea></td>
                 </tr>
                 <tr>
-                    <td>整疗技术</td>
+                    <td>诊疗技术</td>
                     <td><input name="zhenLiaoJiShu" class="easyui-textbox" style="width:100%;height:200px;"
                             data-options="
                                     value:rowPad.row.zhenLiaoJiShu,
