--- a/project.html
+++ b/project.html
@@ -169,7 +169,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>项目名称</td>
+                    <td>案例名称</td>
                     <td><input name="name" class="easyui-textbox" style="width:100%" data-options="
                         value:rowPad.row.name,
                         iconWidth:20,
